# GLUtil

./: .gitignore  CMakeLists.txt  GLUtil.sln
GLUtil/: GLUtil.vcxproj  GLUtil.vcxproj.filters
GLUtil/include/GLUtil/: Buffer.h  Common.h  Debug.h  Mat.h  Math.h  Object.h  Program.h  Sampler.h  Shader.h  State.h  Texture.h  Vec.h
GLUtil/include/glad/: egl.h  gl.h  glad.h  glx.h  vulkan.h  wgl.h
GLUtil/src/: Buffer.cpp  Debug.cpp  Object.cpp  Program.cpp  Sampler.cpp  Shader.cpp  State.cpp  Texture.cpp  egl.c  gl.c  glad.c
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Main.cpp
